# ChangeLog for sys-fs/aufs-util
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/aufs-util/ChangeLog,v 1.4 2012/12/21 09:19:28 jlec Exp $

  21 Dec 2012; Justin Lecher <jlec@gentoo.org> aufs-util-3.6.ebuild:
  Add it kernel back

  21 Dec 2012; Justin Lecher <jlec@gentoo.org> aufs-util-3.6.ebuild:
  Don't depend on the kernel

  19 Dec 2012; Justin Lecher <jlec@gentoo.org> aufs-util-3.6.ebuild,
  metadata.xml:
  Add support for aufs_type.h in kernel src dir

  26 Nov 2012; Justin Lecher <jlec@gentoo.org> +aufs-util-3.6.ebuild,
  +metadata.xml:
  Move from betagarden to the tree

*aufs-util-9999 (13 Nov 2012)
*aufs-util-3.6 (13 Nov 2012)

  13 Nov 2012; Justin Lecher <jlec@gentoo.org> +aufs-util-3.6.ebuild,
  +aufs-util-9999.ebuild, +metadata.xml:
  New addition
