@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST aufs-util-3.6.tar.xz 76104 SHA256 aa5e8275d33933cbbacc68a65d0b48812917d38e3839b2411f76c0efc3ddcb37 SHA512 e73513a549879c26e354bf642c0fe08d7d98299f877519dc654045d6d8d145df7f6cddbd7f0922fbcbd250d9118e505775328aaf7bbdfc0b507d5e93fab69f36 WHIRLPOOL ea0767baf7ef759e1f018f9b6467ce0e64f1684de7c494fca73fd9b79823f2b36924cceea958d9890b22699b09b632d47afcf95bd8cd1510bad0f4c488966851
-EBUILD aufs-util-3.6.ebuild 1254 SHA256 84fcedf0499e9e01911ea0b08b1891c64ffd9bf307a51c39a4e2939e907a7701 SHA512 44aa8c2944de9128b3b3c900b3b19b66a68cd5796f43df0b67758820e8e1f015b6a4720cb616c820562fbcf0f29a20bcaaf3b9f1b3100c6989f3176b122aa2d0 WHIRLPOOL 6cf1c45cd9564f3d1386f71f38fea301c54808799379dc0222b094310086f243784dc4851ceafb83d44dfb6ab68b0e76f777d0a754618896986812ce032a7ea2
-MISC ChangeLog 837 SHA256 f48832cdfcab2a04f957bf95f659ba2c5f4da65536cb006bcabf18be365b5e92 SHA512 a55eb730569cfe05f3b750f67b26d4ffb19b42d56d9bacb191c4e188242de034adefab95d8f84f7c3350ceaeff3f0c5cb132b506d072af7f196792945184ad6a WHIRLPOOL a632a3f5b0a408d043cbacbca7120ea724ff91ea30c2c6fa61355882247676ea22e31736609c003476588297dd3e3e07743b9a2e1630fb47ec2cd5fa5665c8fc
+DIST aufs-util-3.7.tar.xz 76252 SHA256 1353f2d73443f921ca9968cf4a4ce281c0c22ee4c4b506179757275b74bc3cc2 SHA512 765a12d0d35a97efc81d16badca5ec45fc92ceb21666a21788e76de8a05d408ff501fcc5703ea80f77db78ff36e7772ef922804817ed695f0fdd10b9e44e4457 WHIRLPOOL 103e1ba3d58b24418d7e43d3097f51160d4443d5e89fae5c1c44937d2bc2b05160fdf2d7c835a25072a1873ef6e547b53d122a4800d6c519992027dae3d07f87
+EBUILD aufs-util-3.6.ebuild 1280 SHA256 27abdb361f0556896c7431c3686d59c0705cef0cc0203c0b87655aef303f302b SHA512 6bdaf72a3724df26e7c59eae58e111db6ce124598d075c3aa29e8426db1693c9dab8c6cef99a972126150b37a81418102574e868654071a6976b0744cf6a34ce WHIRLPOOL 11f49acc87fcef624b2f90e7aaf2a9db97396f9c529d65df7e989b68c5d612341f9af5a018728eb1ef5bfa98648196f458502271980ed5eb4ab1a402fe570741
+EBUILD aufs-util-3.7.ebuild 1285 SHA256 d5abeb9fd44f6ea9a9396b729440c74d04b5ac55fb6fc71b43471ad1fa16dbd3 SHA512 0a77d64b2e06398239aee87bbf5b04f391ac1547106ec4b892acf6fb8e944d020ccee850ce8e3be6a69ee6b816d96da4a107e5bbf06af148c5e9bdc45c8bae5e WHIRLPOOL 4e3d178878bccd0d63c70b2a16e2c7d291851a2e57bd642853d82b9e3562a5b2e3e6a995919ba0fae900f158f162f0704980a30dfd349cb5da97fb2dbd6764e2
+MISC ChangeLog 977 SHA256 4864844ffc7421a846e85cee7ea8a890391ae9b737b3eb07d7cdc3756088a364 SHA512 5ca835c323075799edfda541fac56789613cc1dcdd95ce0dca4122be13a382a12b81974435982d5ca9a2ed7c3d5ab78902133e96f9d5a5d32e8b2f46ed78ebf1 WHIRLPOOL 332fa71355767a70ca9f078c873ce07cb29abf8a4c9f94682d04070b6fa8acd8102a5d735d4f5e901b26569cdccc5a529b28626fe8a4b99666f654e3261c0889
 MISC metadata.xml 205 SHA256 b4660d1f4b47c8c40fc6f986791c6da3f0d7513fe4489a0d2bbb83346dcb1f5b SHA512 0e0b6e89b125b4849b4164e7cabb5297ae930c4db499c6685c3852a60e209418c26eb33e452a0a78e800c960ac5032f97d436bc3b7266a0ac76092f6f2595d11 WHIRLPOOL dc3dc7c840a6640b42e3fc981c95d0a8e43d3b5834f447a09deebc1b35dbb26e48c3d85db73725c42d2036edd9f141fb02a3a9d61522861f4e97e3e974987473
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlDUKaEACgkQgAnW8HDreRaMVgCgzXUGIv9JQK6CDumyYTLlxv94
-kq8AniMxq/eZyoSn8u2RL4ff0UJw9Zbl
-=7ZMv
+iEYEAREIAAYFAlDzzSMACgkQgAnW8HDreRac0QCaAhQlKlmtqch3OShq5hnqB1Bu
+k38AniCJie6ebuqD5NPs0bKjv+ppvER6
+=Boai
 -----END PGP SIGNATURE-----
