@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/aufs-util/aufs-util-3.6.ebuild,v 1.5 2013/01/14 09:17:22 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/aufs-util/aufs-util-3.7.ebuild,v 1.1 2013/01/14 09:17:22 jlec Exp $
 
 EAPI=5
 
@@ -9,9 +9,9 @@ inherit flag-o-matic linux-info multilib toolchain-funcs
 DESCRIPTION="Utilities are always necessary for aufs"
 HOMEPAGE="http://aufs.sourceforge.net/"
 SRC_URI="http://dev.gentoo.org/~jlec/distfiles/${P}.tar.xz"
-# git archive -v --prefix=aufs-util-3.6/ \
+# git archive -v --prefix=aufs-util-3.7/ \
 # --remote=git://aufs.git.sourceforge.net/gitroot/aufs/aufs-util.git aufs3.0 \
-# -o aufs-util-3.6.tar && xz -ve9 aufs-util-3.6.tar
+# -o aufs-util-3.7.tar && xz -ve9 aufs-util-3.7.tar
 
 SLOT="0"
 LICENSE="GPL-2"
@@ -28,7 +28,7 @@ CONFIG_CHECK="~AUFS_FS"
 ERROR_AUFS_FS="In order to mount aufs you need to enable CONFIG_AUFS_FS in your kernel"
 
 src_prepare() {
-	[[ -e "${KERNEL_DIR}"/include/linux/aufs_type.h ]] || \
+	[[ -e "${KERNEL_DIR}"/include/uapi/linux/aufs_type.h ]] || \
 		die "Please select aufs-sources before building ${PN}"
 	append-cppflags -I"${KERNEL_DIR}/include"
 	sed \
