@@ -1,6 +1,12 @@
 # ChangeLog for sys-fs/aufs-util
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/aufs-util/ChangeLog,v 1.4 2012/12/21 09:19:28 jlec Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/aufs-util/ChangeLog,v 1.5 2013/01/14 09:17:22 jlec Exp $
+
+*aufs-util-3.7 (14 Jan 2013)
+
+  14 Jan 2013; Justin Lecher <jlec@gentoo.org> aufs-util-3.6.ebuild,
+  +aufs-util-3.7.ebuild:
+  Version Bump
 
   21 Dec 2012; Justin Lecher <jlec@gentoo.org> aufs-util-3.6.ebuild:
   Add it kernel back
